--- a/src/Register.css
+++ b/src/Register.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 100px;
   }
   .box {
     position: relative;
@@ -28,10 +29,13 @@
     border-radius: 10px;
     box-shadow: 5px 5px 18px #38383890;
     overflow: hidden;
+    gap: 100px;
     
   }
+
   
   .title-box {
+    padding: 20px;
     display: flex;
     position: relative;
     justify-content: center;
@@ -39,11 +43,12 @@
     margin: auto;
     box-shadow: 0 0 20px 9px #ff61241f;
     border-radius: 100px;
+    gap: 0px;
   
 
    }
   
-  .title-box::before {
+  .title-box::after {
     content: "";
     position: absolute;
     width: 110px;
@@ -117,7 +122,7 @@
     outline: none;
     user-select: none;
     border: 0;
-    background: linear-gradient(to right, #ff105f, #ffad06);
+    /* background: linear-gradient(to right, #ff105f, #ffad06); */
     cursor: pointer;
   }
   #login {
@@ -179,7 +184,7 @@
     border-radius: 100px;
     left: var(--lf);
     transition: 0.5s;
- right: 0; 
+    right: 0; 
   }
   .title-box button {
     position: relative;
@@ -244,7 +249,7 @@
     outline: none;
     user-select: none;
     border: 0;
-    background: linear-gradient(to right, #ff105f, #ffad06);
+    /* background: linear-gradient(to right, #ff105f, #ffad06); */
     cursor: pointer;
   }
   #login {
@@ -263,7 +268,11 @@ padding: 50px;
   }
   .login {
     color: black;
-    padding: 0 10px;
+    padding: 0;
+  }
+  #r {
+    background-color: linear-gradient(to right, #ff105f, #ffad06) ;
+    text-decoration: double;
   }
 
     
