--- a/src/login.css
+++ b/src/login.css
@@ -247,7 +247,7 @@
   }
   .register{
     color: black;
-    padding: 0 10px;
+    padding: 0 50px;
   }
   #login {
     left: 35px;
@@ -270,4 +270,18 @@
     width: 100px;
     height: 30px; */
   }
+  .p{
+    display: block;
+    padding-left: 0px;
+    margin-left: 0px;
+    text-align: center;
+    padding: 0px;
+margin: 0px; 
+    /* text-decoration: underline; */
+
+ }
+
+#p{
+  text-decoration: underline;
+}
     
