--- a/src/login.css
+++ b/src/login.css
@@ -10,7 +10,7 @@
   }
   
   .mainContainer {
-    width: 365%;
+    width: 100%;
     height: 100vh;
     background: #ee0979;
     background: -webkit-linear-gradient(to left, #ff6a00, #ee0979);
@@ -24,7 +24,7 @@
     width: 350px;
     height: 450px;
     background-color: #fff;
-    padding: 30px 35px 70px 35px;
+    /* padding: 30px 35px 70px 35px; */
     border-radius: 10px;
     box-shadow: 5px 5px 18px #38383890;
     overflow: hidden;
@@ -33,9 +33,10 @@
   .title-box {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     width: fit-content;
-    margin: auto;
+    /* margin: auto; */
     box-shadow: 0 0 20px 9px #ff61241f;
     border-radius: 100px;
   }
@@ -56,20 +57,20 @@
     width: 110px;
     font-size: 1rem;
     font-weight: 600;
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     border-radius: 100px;
     outline: none;
     user-select: none;
     border: 0;
     background-color: transparent;
     cursor: pointer;
-    text-align: center;
+    /* text-align: center; */
   }
   .icon {
     display: flex;
     justify-content: space-evenly;
     width: 150px;
-    margin: 25px auto;
+    /* margin: 25px auto; */
   }
   .icon img {
     width: 25px;
@@ -93,7 +94,7 @@
     margin: 0 10px 30px 0;
   }
   .input-field .input-text {
-    padding: 10px 15px 10px 0;
+    /* padding: 10px 15px 10px 0; */
     border: 0;
     outline: none;
     border-bottom: 2px solid #eaeaea;
@@ -106,10 +107,10 @@
   .input-field button {
     display: block;
     width: 90%;
-    margin: auto;
+    /* margin: auto; */
     font-size: 16px;
     font-weight: 600;
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     border-radius: 100px;
     outline: none;
     user-select: none;
@@ -117,12 +118,16 @@
     background: linear-gradient(to right, #ff105f, #ffad06);
     cursor: pointer;
   }
+  .register{
+    color: black;
+    /* padding: 0 50px; */
+  }
   #login {
-    left: 35px;
+    left: 0px;
     transition: 0.5s;
   }
   #register {
-    left: 450px;
+    left: 0px;
     transition: 0.5s;
   }
   * {
@@ -137,14 +142,14 @@
   }
   
   .mainContainer {
-    width: 365%;
+    width: 300%;
     height: 100vh;
     background: #ee0979;
     background: -webkit-linear-gradient(to left, #ff6a00, #ee0979);
     background: linear-gradient(to left, #ff6a00, #ee0979);
     display: flex;
     justify-content: center;
-    align-items: center;
+   /* margin-left: 0%; */
   }
   .box {
     position: relative;
@@ -184,7 +189,7 @@
     width: 110px;
     font-size: 1rem;
     font-weight: 600;
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     border-radius: 100px;
     outline: none;
     user-select: none;
@@ -197,7 +202,7 @@
     display: flex;
     justify-content: space-evenly;
     width: 150px;
-    margin: 25px auto;
+    /* margin: 25px auto; */
   }
   .icon img {
     width: 25px;
@@ -206,7 +211,7 @@
     cursor: pointer;
   }
   .input-field {
-    width: 80%;
+    /* width: 80%; */
     margin: auto;
     position: absolute;
   }
@@ -221,7 +226,7 @@
     margin: 0 10px 30px 0;
   }
   .input-field .input-text {
-    padding: 10px 15px 10px 0;
+    padding:  10px 0;
     border: 0;
     outline: none;
     border-bottom: 2px solid #eaeaea;
@@ -247,14 +252,14 @@
   }
   .register{
     color: black;
-    padding: 0 50px;
+    /* padding: 0 50px; */
   }
   #login {
     left: 35px;
     transition: 0.5s;
   }
   #register {
-    left: 450px;
+    /* left: 50px; */
     transition: 0.5s;
   /* }
   .register {
@@ -271,10 +276,10 @@
     height: 30px; */
   }
   .p{
-    display: block;
+    /* display: block; */
     padding-left: 0px;
     margin-left: 0px;
-    text-align: center;
+    /* text-align: center; */
     padding: 0px;
 margin: 0px; 
     /* text-decoration: underline; */
